--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1954,7 +1954,7 @@ ul.actions li:first-child {
 
 .wrapper.style2 {
   background-color: #fafafa;
-  text-shadow: 1px 1px 0px #fff;
+  // text-shadow: 1px 1px 0px #fff;
 }
 
 .wrapper.style3 {
