--- a/templates/dynamic-js-badge.html
+++ b/templates/dynamic-js-badge.html
@@ -35,7 +35,7 @@
     </style>
     <div style="width: 40px; height: 40px; border-radius:4px; float:left; margin-top:5px; margin-left:5px;">
         <img style="width:40px; height: 40px; border-radius:4px;"
-             src="{{ data.avatar }}">
+             src="{{ data.avatar_url }}">
     </div>
     <div class="rootme_font" style="float:left; height:40px; padding-left: 5px; margin-top:5px;">
         <p class="rootme_line">
