Display theme info on dynamic js badge

--- a/templates/badge.html
+++ b/templates/badge.html
@@ -13,7 +13,7 @@
             <div class="col-6 col-6-medium col-12-small">
                 <section class="box style1">
 					<h3>Dynamic JS Badge</h3>
-                    <p></p>
+                    <p>HackTheBox theme</p>
                     {% include "dynamic-js-badge.html" with context %}
                 </section>
             </div>
