Use a custom class for dynamic js badge

--- a/templates/dynamic-js-badge.html
+++ b/templates/dynamic-js-badge.html
@@ -1,4 +1,5 @@
-<div style="width: 220px; height:50px; background-color: #343c41; border-radius:4px; text-align: left;
+<div class="show_js_badge"
+     style="width: 220px; height:50px; background-color: #343c41; border-radius:4px; text-align: left;
             background-image: url({{ data.url }}/storage_server/skull-white.png); background-size: 20px 20px;
             background-position: right 2px bottom 3px; background-repeat: no-repeat;"
 >
