--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <meta name="author" content="Aurélien Duboc <aurelien[At]duboc.xyz>">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/custom.css') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/sweetalert2.css') }}"/>
 </head>
 
