--- a/templates/badge.html
+++ b/templates/badge.html
@@ -18,7 +18,7 @@
                 <section class="box style1">
                     <h3>Static PNG Badge</h3>
                     <p>{{ badge.theme }} theme</p>
-                    <img src="/{{ badge.path }}" />
+                    <img class="show_png_badge" src="/{{ badge.path }}" />
                     <pre><code class="html">&lt;img src=&quot;{{ data.url }}/{{ badge.path }}&quot; /&gt;</code></pre>
                     </code></pre>
                 </section>
