Replace placeholder on username input

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                                 <div class="col-12">
                                     <label for="username">RootMe username:</label>
                                     <input type="text" name="username" id="username"
-                                           placeholder="Example: zTeeed-155405 (Profile link: https://www.root-me.org/zTeeed-115405)"
+                                           placeholder="Example: zTeeed"
                                     />
                                 </div>
                             </div>
