--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
 {% with messages = get_flashed_messages(with_categories=true) %}
 {% if messages %}
   {% for category, message in messages %}
-    <script>display_sw2("{{ message  }}", "Information", "{{ category }}");</script>
+    <script>display_sw2(`{{ message | safe }}`, "Information", "{{ category }}");</script>
   {% endfor %}
 {% endif %}
 {% endwith %}
