--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/main.css') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/custom.css') }}"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/sweetalert2.css') }}"/>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo.png') }}"/>
 </head>
 
 <!-- Scripts -->
