Fix Code scanning alerts

--- a/templates/badge.html
+++ b/templates/badge.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- Server -->
 <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/dracula.css') }}"/>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/highlight.min.js"></script>
+<script src="{{ url_for('static', filename='assets/js/ajax/libs/highlight.js/10.1.2/highlight.min.js') }}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <article id="work" class="wrapper style2">
     <div class="container">
